--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/lBiondoSDJ/AICoach#readme",
   "description": "",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "google-auth-library": "^9.15.1",
     "node-fetch": "^2.7.0"
   }
